--- a/resources/scss/components/_variables.scss
+++ b/resources/scss/components/_variables.scss
@@ -1,4 +1,5 @@
-$primary:rgb(252, 207, 61);
+$primary: rgb(252, 207, 61);
+$secondary: rgb(252, 48, 67);
 $bg: #F7F7F8;
 $text:rgb(93, 93, 93);
 $title: rgb(33, 33, 33);
