--- a/resources/scss/components/_navbar.scss
+++ b/resources/scss/components/_navbar.scss
@@ -143,6 +143,17 @@
                 position: relative;
                 display: inline-block;
 
+                &-button {
+                    p {
+                        margin: 0;
+                    }
+
+                    img {
+                        max-height: 65%;
+                        border-radius: 100px;
+                    }
+                }
+
                 &-content {
                     display: none;
                     position: absolute;
