--- a/resources/scss/components/_variables.scss
+++ b/resources/scss/components/_variables.scss
@@ -1,6 +1,9 @@
 $primary: rgb(252, 207, 61);
 $secondary: rgb(252, 48, 67);
-$bg: #F7F7F8;
+$bg: #f7f7fc;
 $text:rgb(93, 93, 93);
 $title: rgb(33, 33, 33);
 $gap: 15px;
+
+$dark: #222e3c;
+$blue: #09f;
