--- a/resources/scss/components/_variables.scss
+++ b/resources/scss/components/_variables.scss
@@ -1,8 +1,8 @@
-$primary: rgb(252, 207, 61);
+$primary: #fbcf3d;
 $secondary: rgb(252, 48, 67);
 $bg: #f7f7fc;
-$text:rgb(93, 93, 93);
-$title: rgb(33, 33, 33);
+$text:#5e5f5f;
+$title: #5e5f5f;
 $gap: 15px;
 
 $dark: #222e3c;
