--- a/resources/scss/components/_blog.scss
+++ b/resources/scss/components/_blog.scss
@@ -108,21 +108,12 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background: linear-gradient(-18deg, lighten($primary, 10%), lighten($primary, 25%) 60%);
+            background-image: linear-gradient(-18deg, transparentize(lighten($primary, 1%), 0.2), transparentize(lighten($primary, 5%), 0.4) 80%), url('../storage/banner-blog.jpg');
+            background-size: cover;
+            background-position: bottom;
             position: relative;
             flex-direction: column;
 
-            &:before {
-                position: absolute;
-                width: 100%;
-                left: 0;
-                top: 0;
-                bottom: 0;
-                background-image: radial-gradient(lighten($primary, 25%) 3px, transparent 3px);
-                background-size: 30px 30px;
-                content: '';
-                z-index: 1;
-            }
 
             h3 {
                 font-size: 3.5em;
