--- a/resources/scss/style.scss
+++ b/resources/scss/style.scss
@@ -247,5 +247,9 @@ body {
 @import "./components/recipt";
 
 .hidden {
-    display: none;
+    display: none !important;
+}
+
+.invisible {
+    opacity: 0 !important;
 }
